# env-ctl

./: Cargo.toml  HANDOFF.md  README.md
crates/secretctl/: Cargo.toml
crates/secretctl/src/: main.rs  render.rs
crates/secretd/: Cargo.toml
crates/secretd/src/: audit.rs  grpc.rs  main.rs  peercred.rs
crates/secrets-engine/: Cargo.toml
crates/secrets-engine/src/: keyslot.rs  lib.rs  paths.rs  seam.rs
crates/secrets-engine/src/broker/: decide.rs  mod.rs  policy.rs  token.rs
crates/secrets-engine/src/vault/: aad.rs  crypto.rs  mod.rs  store.rs
crates/secrets-engine/tests/: vault.rs
crates/secrets-store-libsql/: Cargo.toml  README.md
crates/secrets-store-libsql/src/: health.rs  lib.rs  schema.rs  store.rs  sync.rs
crates/secrets-store-libsql/tests/: integration_remote.rs
docs/: DESIGN-NOTES.md  ROADMAP.md  SERVER-MODE.md  THREAT-MODEL.md
docs/db/: schema.sql
docs/ops/: 07-ci-supplychain.md
