[workspace]
resolver = "2"
members = [
  "crates/secrets-engine",
  "crates/secrets-proto",
  "crates/secretd",
  "crates/secretctl",
  "crates/secrets-store-libsql",   # OI-1 RESOLVED (a): adopted — see [workspace.dependencies] libsql note
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# ---- shared with envctl on merge (caret-compatible; re-resolves to one unified lockfile) ----
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
which = "7.0"
# MERGE NOTE (HF-17): envctl's row is features=["process"]; the merged row MUST union to
# ["process","net","time"] — `time` adds CLOCK_BOOTTIME (clock_gettime) for the OI-6 monotonic
# clock-rollback fence on the 24h relay window. All three are pure-Rust on Linux (no C dep).
rustix = { version = "0.38", features = ["process", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ---- async / network: pulled ONLY by secretd (+ proto/cli); the engine stays sync ----
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "sync", "fs", "process", "signal", "time", "io-util"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
tower = "0.5"
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
webpki-roots = "0.26"   # explicit frozen Mozilla roots for upstream egress (never OS store / local CA)

# ---- store: backend behind a Store trait. OI-1 RESOLVED (a) = libSQL `remote` (NEW-3): its
# ---- server/replica/sync is the required remote-serving feature. The libsql dep lives ONLY in
# ---- `crates/secrets-store-libsql` (consumed ONLY by secretd, behind the engine `Store` trait); the
# ---- engine/proto/cli members never link it. `default-features=false, features=["remote"]` so the
# ---- bundled C-SQLite `core` path (`libsql-ffi`) is NOT pulled — proven by ci/gates/no-c.sh Gate 3a.
# ---- Upheld tenet = "no C *library* in the trust boundary" (no SQLite/OpenSSL/aws-lc). NOT upheld:
# ---- "no `cc`" — a C build-toolchain is already mandatory via ring + blake3 (engine), and `remote`
# ---- adds `libsql-sqlite3-parser`'s build-time `lemon.c` codegen (emits Rust; nothing C is linked).
# ---- Engine default store stays `inmem-store`; secretd runtime selection of this backend is Phase 1.
# ---- Target remains strict C-toolchain-free (blake3 `pure` + a pure-Rust Hrana client) — see OI-1.
libsql = { version = "0.9.30", default-features = false, features = ["remote"] }

# ---- crypto (engine; pure-Rust, no C/SQLCipher) ----
chacha20poly1305 = { version = "0.10", features = ["alloc", "getrandom", "rand_core"] }
# `zeroize` feature (off in argon2's default set) wipes the Block memory arena + hash
# intermediates on drop so a passphrase-derived 256 MiB-1 GiB scratch buffer is not left in
# freed heap after each unlock (research/02-argon2id-keyslots.md §RAM hygiene; keyslot.rs HF-S).
argon2 = { version = "0.5", features = ["zeroize"] }
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
rand = "0.8"
getrandom = "0.2"

# ---- TLS / local CA: pin ONE rustls on the RING path (NOT aws-lc-rs) ----
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
x509-parser = "0.16"
async-trait = "0.1"

# ---- internal crates ----
envctl-secrets-engine = { path = "crates/secrets-engine" }
envctl-secrets-proto  = { path = "crates/secrets-proto" }

[profile.release]
opt-level = 2
