[package]
name = "envctl-secretctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "secretctl"
path = "src/main.rs"

[dependencies]
envctl-secrets-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
